# aivora

./: .gitignore  RELEASE_CHECKLIST.md  deep-research-report.md  fix-i18n.js  package-lock.json  package.json  scaffold.mjs  turbo.json
.specify/: feature.json
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.turbo/cache/: 01af5b8f7bd6d091-manifest.json  01af5b8f7bd6d091-meta.json  01af5b8f7bd6d091.tar.zst  0360f1b2a0e58507-manifest.json  0360f1b2a0e58507-meta.json  2ee4e1645cdbaa06-manifest.json  2ee4e1645cdbaa06-meta.json  38e2c043b27df97b-manifest.json  38e2c043b27df97b-meta.json  4bdf606424645980-manifest.json  4bdf606424645980-meta.json  5223a21b11d34e96-manifest.json  (+49 more)
backend/: Dockerfile  pyproject.toml  requirements.txt  run_migration.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  leads.py
backend/app/core/: prompts.py
backend/app/prompts/: composer.py  engineering.md  formatting.md  system.md
backend/app/providers/: base.py  provider_factory.py
backend/app/schemas/: schema.py
backend/app/services/: ai_service.py  streaming.py
design systems/: cv.md  desi.md  desi2.md  ivora.md  namesskills.md
frontend/: .env.example  .gitignore  eslint.config.ts  next.config.ts  package-lock.json  package.json  run_migration.mjs  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vercel_production_debug_summary.md  vitest.config.ts
(+438 files in other folders)
